@@ -12,6 +12,12 @@
 	<name>Build project for the InSynth plugin</name>
 	<packaging>pom</packaging>
 
+  <parent>
+    <groupId>org.scala-ide</groupId>
+    <artifactId>plugin-profiles</artifactId>
+    <version>1.0.0</version>
+  </parent>
+
 	<modules>
 		<module>ch.epfl.insynth</module>
 		<module>ch.epfl.insynth.feature</module>
@@ -21,229 +27,27 @@
 	</modules>
 
 	<properties>
-		<encoding>UTF-8</encoding>
-		<repo.scala-ide.root>http://download.scala-ide.org</repo.scala-ide.root>
-
 		<!-- InSynth -->
 		<insynth.library.name>Specify a profile - insynth.library.name!</insynth.library.name>
 		<insynth.library.version>1.3</insynth.library.version>
-
-		<!-- dependencies repos -->
-		<eclipse.codename>Specify a profile - eclipse.codename!</eclipse.codename>
-		<repo.eclipse>Specify a profile - repo.eclipse!</repo.eclipse>
-		<repo.ajdt>Specify a profile - repo.ajdt!</repo.ajdt>
-		<weaving.hook.plugin.version>Specify a profile!</weaving.hook.plugin.version>
-
-		<scala.version>Specify a profile - scala.version!</scala.version>
-		<version.tag>local</version.tag>
-		<repo.scala-ide>Specify a profile - repo.scala-ide!</repo.scala-ide>
-		<!-- repository is different for each profile -->
-
-		<!-- fixed versions -->
-		<tycho.version>0.16.0</tycho.version>
-		<scala.plugin.version>3.0.2</scala.plugin.version>
-		<junit.version>4.10</junit.version>
-	    <log4j.version>2.0-beta3</log4j.version>
-	    <scalalogging-log4j.version>1.0.1</scalalogging-log4j.version>
-
-		<!-- tycho test related -->
-		<tycho.test.OSspecific />
-		<!-- Partial workaround against JDT Weaving deadlocks. See #1000317 and 
-			the original ticket on https://issuetracker.springsource.com/browse/STS-1445 -->
-		<tycho.test.weaving>-XX:+UnlockDiagnosticVMOptions -XX:+UnsyncloadClass -Dosgi.classloader.lock=classname</tycho.test.weaving>
-		<tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m -Dsdtcore.headless ${tycho.test.weaving} ${tycho.test.OSspecific}</tycho.test.jvmArgs>
-
 	</properties>
 
 	<profiles>
 
 		<profile>
-			<!-- pull the data needed to add the version numbers to the manifests -->
-			<id>set-versions</id>
-			<dependencies>
-				<dependency>
-					<groupId>org.scala-ide</groupId>
-					<artifactId>build-tools_2.9.2</artifactId>
-					<version>0.2.0</version>
-				</dependency>
-			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>exec-maven-plugin</artifactId>
-						<version>1.2.1</version>
-						<executions>
-							<execution>
-								<id>set-versions</id>
-								<goals>
-									<goal>java</goal>
-								</goals>
-							</execution>
-						</executions>
-						<configuration>
-							<classpathScope>compile</classpathScope>
-							<mainClass>org.scalaide.buildtools.UpdateAddonManifests</mainClass>
-							<arguments>
-								<argument>${repo.scala-ide}</argument>
-							</arguments>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-			<repositories>
-				<repository>
-					<!-- extra repository containing the build package -->
-					<id>typesafe-ide</id>
-					<name>Typesafe IDE repository</name>
-					<url>http://repo.typesafe.com/typesafe/ide-2.9</url>
-					<snapshots>
-						<enabled>true</enabled>
-					</snapshots>
-				</repository>
-			</repositories>
-		</profile>
-
-		<profile>
-			<id>indigo</id>
+			<id>scala-2.9.x</id>
 			<properties>
-				<eclipse.codename>indigo</eclipse.codename>
-				<repo.eclipse>http://download.eclipse.org/releases/indigo/</repo.eclipse>
-				<repo.ajdt>http://download.eclipse.org/tools/ajdt/37/update</repo.ajdt>
-				<weaving.hook.plugin.version>1.0.200.I20120427-0800</weaving.hook.plugin.version>
-			</properties>
-		</profile>
-		<profile>
-			<id>juno</id>
-			<properties>
-				<eclipse.codename>juno</eclipse.codename>
-				<repo.eclipse>http://download.eclipse.org/releases/juno/</repo.eclipse>
-				<repo.ajdt>http://download.eclipse.org/tools/ajdt/42/update</repo.ajdt>
-				<weaving.hook.plugin.version>1.0.200.v20120524-1707</weaving.hook.plugin.version>
-			</properties>
-		</profile>
-
-<!-- 		<profile> -->
-<!-- 			<id>2.9.x</id> -->
-<!-- 			<properties> -->
-<!-- 				<scala.version>2.9.3-RC2</scala.version> -->
-<!-- 				<version.suffix>2_09</version.suffix> -->
-<!-- 				<scala.version.short>2.9</scala.version.short> -->
-<!-- 				<insynth.library.name>ch.epfl.insynth.library.jar</insynth.library.name> -->
-<!-- 			</properties> -->
-<!-- 			<repositories> -->
-<!-- 				<repository> -->
-<!-- 					<id>typesafe-ide</id> -->
-<!-- 					<name>Typesafe IDE repository</name> -->
-<!-- 					<url>http://repo.typesafe.com/typesafe/ide-2.9</url> -->
-<!-- 					<snapshots> -->
-<!-- 						<enabled>true</enabled> -->
-<!-- 					</snapshots> -->
-<!-- 				</repository> -->
-<!-- 			</repositories> -->
-<!-- 		</profile> -->
-
-		<profile>
-			<id>2.10.x</id>
-			<properties>
-				<scala.version>2.10.1-RC2</scala.version>
-				<version.suffix>2_10</version.suffix>
-				<scala.version.short>2.10</scala.version.short>
-				<insynth.library.name>ch.epfl.insynth.library_2.10-1.3.jar</insynth.library.name>
-			</properties>
-			<repositories>
-				<repository>
-					<id>typesafe-ide</id>
-					<name>Typesafe IDE repository</name>
-					<url>http://repo.typesafe.com/typesafe/ide-2.10</url>
-					<snapshots>
-						<enabled>true</enabled>
-					</snapshots>
-				</repository>
-			</repositories>
-		</profile>
-
-		<!-- dev profiles - for Milestones and RCs -->
-<!-- 		<profile> -->
-<!-- 			<id>dev-scala-ide-indigo-scala-2.9</id> -->
-<!-- 			<properties> -->
-<!-- 				<repo.scala-ide>${repo.scala-ide.root}/ecosystem/next/e37/scala29/dev/base/</repo.scala-ide> -->
-<!-- 			</properties> -->
-<!-- 		</profile> -->
-		<profile>
-			<id>dev-scala-ide-indigo-scala-2.10</id>
-			<properties>
-				<repo.scala-ide>${repo.scala-ide.root}/ecosystem/next/e37/scala210/dev/base/</repo.scala-ide>
-			</properties>
-		</profile>
-<!-- 		<profile> -->
-<!-- 			<id>dev-scala-ide-juno-scala-2.9</id> -->
-<!-- 			<properties> -->
-<!-- 				<repo.scala-ide>${repo.scala-ide.root}/ecosystem/next/e38/scala29/dev/base/</repo.scala-ide> -->
-<!-- 			</properties> -->
-<!-- 		</profile> -->
-		<profile>
-			<id>dev-scala-ide-juno-scala-2.10</id>
-			<properties>
-				<repo.scala-ide>${repo.scala-ide.root}/ecosystem/next/e38/scala210/dev/base/</repo.scala-ide>
-			</properties>
-		</profile>
-		
-		<!-- stable profiles - for stable releases -->
-		<profile>
-			<id>stable-scala-ide-indigo-scala-2.9</id>
-			<properties>
-				<repo.scala-ide>${repo.scala-ide.root}/sdk/e37/scala29/stable/site/</repo.scala-ide>
-			</properties>
-		</profile>
-		<profile>
-			<id>stable-scala-ide-indigo-scala-2.10</id>
-			<properties>
-				<repo.scala-ide>${repo.scala-ide.root}/sdk/e37/scala210/stable/site/</repo.scala-ide>
-			</properties>
-		</profile>
-		<profile>
-			<id>stable-scala-ide-juno-scala-2.9</id>
-			<properties>
-				<repo.scala-ide>${repo.scala-ide.root}/sdk/e38/scala29/stable/site/</repo.scala-ide>
-			</properties>
-		</profile>
-		<profile>
-			<id>stable-scala-ide-juno-scala-2.10</id>
-			<properties>
-				<repo.scala-ide>${repo.scala-ide.root}/sdk/e38/scala210/stable/site/</repo.scala-ide>
+				<insynth.library.name>ch.epfl.insynth.library.jar</insynth.library.name>
 			</properties>
 		</profile>
 
 		<profile>
-			<!-- nightly Scala IDE with Scala 2.9 -->
-			<id>nightly-scala-ide-scala-2.9</id>
+			<id>scala-2.10.x</id>
 			<properties>
-				<repo.scala-ide>${repo.scala-ide.root}/nightly-update-master-29x</repo.scala-ide>
-				<scala.version>2.9.3-SNAPSHOT</scala.version>
+				<insynth.library.name>ch.epfl.insynth.library-2.10.jar</insynth.library.name>
 			</properties>
 		</profile>
-		<profile>
-			<!-- nightly Scala IDE with Scala 2.10.0 -->
-			<id>nightly-scala-ide-scala-2.10.0</id>
-			<properties>
-				<repo.scala-ide>${repo.scala-ide.root}/nightly-update-master-2.10.0</repo.scala-ide>
-			</properties>
-		</profile>
-		<profile>
-			<!-- nightly Scala IDE for Eclipse Juno with Scala 2.9 -->
-			<id>nightly-scala-ide-juno-scala-2.9</id>
-			<properties>
-				<repo.scala-ide>${repo.scala-ide.root}/nightly-update-juno-master-29x</repo.scala-ide>
-			</properties>
-		</profile>
-		<profile>
-			<!-- nightly Scala IDE for Eclipse Juno with Scala 2.10.0 -->
-			<id>nightly-scala-ide-juno-master-scala-trunk</id>
-			<properties>
-				<repo.scala-ide>${repo.scala-ide.root}/nightly-update-juno-master-2.10.x</repo.scala-ide>
-			</properties>
-		</profile>
+
 	</profiles>
 
 	<!-- scm configuration is require to extract the github hash -->
@@ -277,184 +81,8 @@
 		</dependencies>
 	</dependencyManagement>
 
-	<repositories>
-		<repository>
-			<id>sonatype.release</id>
-			<name>Sonatype maven release repository</name>
-			<url>https://oss.sonatype.org/content/repositories/releases/</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>sonatype.snapshot</id>
-			<name>Sonatype maven snapshot repository</name>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-			<snapshots>
-				<updatePolicy>daily</updatePolicy>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>scala-ide</id>
-			<name>Scala IDE p2 repository</name>
-			<layout>p2</layout>
-			<url>${repo.scala-ide}</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>eclipse.${eclipse.codename}</id>
-			<name>Eclipse p2 repository</name>
-			<layout>p2</layout>
-			<url>${repo.eclipse}</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>ajdt.${eclipse.codename}</id>
-			<name>AJDT for Eclipse p2 repository</name>
-			<layout>p2</layout>
-			<url>${repo.ajdt}</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
-
 	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.eclipse.tycho</groupId>
-					<artifactId>tycho-surefire-plugin</artifactId>
-					<version>${tycho.version}</version>
-					<configuration>
-						<useUIHarness>false</useUIHarness>
-						<useUIThread>false</useUIThread>
-
-						<!-- Enable JDT weaving -->
-						<systemProperties combine.children="append">
-							<aj.weaving.verbose>true</aj.weaving.verbose>
-							<org.aspectj.weaver.showWeaveInfo>true</org.aspectj.weaver.showWeaveInfo>
-							<org.aspectj.osgi.verbose>true</org.aspectj.osgi.verbose>
-						</systemProperties>
-						<frameworkExtensions>
-							<frameworkExtension>
-								<groupId>p2.osgi.bundle</groupId>
-								<artifactId>org.eclipse.equinox.weaving.hook</artifactId>
-								<version>${weaving.hook.plugin.version}</version>
-							</frameworkExtension>
-						</frameworkExtensions>
-						<bundleStartLevel>
-							<bundle>
-								<id>org.eclipse.equinox.weaving.aspectj</id>
-								<level>2</level>
-								<autoStart>true</autoStart>
-							</bundle>
-						</bundleStartLevel>
-						<argLine>${tycho.test.jvmArgs}</argLine>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-		<plugins>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-maven-plugin</artifactId>
-				<version>${tycho.version}</version>
-				<extensions>true</extensions>
-			</plugin>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-compiler-plugin</artifactId>
-				<version>${tycho.version}</version>
-				<configuration>
-					<excludeResources>
-						<excludeResource>**/*.scala</excludeResource>
-					</excludeResources>
-				</configuration>
-			</plugin>
-			<plugin>
-				<!-- configuration of the scala compiler -->
-				<groupId>net.alchim31.maven</groupId>
-				<artifactId>scala-maven-plugin</artifactId>
-				<version>${scala.plugin.version}</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>compile</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<jvmArgs>
-						<jvmArg>-Xms512m</jvmArg>
-						<jvmArg>-Xmx1024m</jvmArg>
-					</jvmArgs>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-source-plugin</artifactId>
-				<version>${tycho.version}</version>
-				<executions>
-					<execution>
-						<id>attach-source</id>
-						<goals>
-							<goal>plugin-source</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>2.1.2</version>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<!-- for setting a better qualifier -->
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-packaging-plugin</artifactId>
-				<version>${tycho.version}</version>
-				<configuration>
-					<format>'${version.tag}-${version.suffix}-'yyyyMMddHHmm'-${buildNumber}'</format>
-					<archiveSite>true</archiveSite>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-versions-plugin</artifactId>
-				<version>${tycho.version}</version>
-			</plugin>
-			<!-- plugin used to extract the git hash -->
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>buildnumber-maven-plugin</artifactId>
-				<version>1.1</version>
-				<executions>
-					<execution>
-						<phase>validate</phase>
-						<goals>
-							<goal>create</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<doCheck>false</doCheck>
-					<doUpdate>false</doUpdate>
-					<shortRevisionLength>7</shortRevisionLength>
-				</configuration>
-			</plugin>
+    <plugins>
 			<!-- install InSynth library jar -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -477,31 +105,6 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>target-platform-configuration</artifactId>
-				<version>${tycho.version}</version>
-				<configuration>
-					<!-- tell tycho what target environments you are interested in -->
-					<environments>
-						<environment>
-							<os>win32</os>
-							<ws>win32</ws>
-							<arch>x86</arch>
-						</environment>
-						<environment>
-							<os>linux</os>
-							<ws>gtk</ws>
-							<arch>x86_64</arch>
-						</environment>
-						<environment>
-							<os>macosx</os>
-							<ws>cocoa</ws>
-							<arch>x86_64</arch>
-						</environment>
-					</environments>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
